--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DimasKachFit</string>
     <string name="slogan">Мій шлях до ідеалу!</string>
+    <string name="day">День: </string>
 
 </resources>
