--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">DimasKachFit</string>
     <string name="slogan">Мій шлях до ідеалу!</string>
-    <string name="day">День: </string>
+    <string name="day">" День: "</string>
+    <string name="exercise">" вправи</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
