--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,14 @@
     <string name="app_name">DimasKachFit</string>
     <string name="slogan">Мій шлях до ідеалу!</string>
     <string name="day">" День: "</string>
+    <string name="days">" Дні тренувань "</string>
     <string name="exercise">" вправи</string>
+    <string name="exercises">Вправи </string>
+    <string name="working">Їбашимо </string>
     <string name="waiting_message">Вправи почнуться через:</string>
     <string name="start">Старт</string>
     <string name="next">Наступна вправа</string>
+    <string name="done">Юхуху!!!</string>
+    <string name="waiting">Готуємось до пекла</string>
+    <string name="dayoff">Юпппі, я це зробив!!!</string>
 </resources>
